[tool.poetry]
name = "summary-bot"
version = "0.1.0"
description = ""
authors = ["Denis King <newmancu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
pydantic = "^2.6.3"
sqlalchemy = "^2.0.28"
uvicorn = "^0.28.0"
pydantic-settings = "^2.2.1"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
